// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorScreen with errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 120,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Jost-Book",
          "fontSize": 26,
          "lineHeight": 32,
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Jost-Medium",
          "fontSize": 22,
          "lineHeight": 28,
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        {
          "backgroundColor": "rgba(238, 238, 238, 0.75)",
          "borderRadius": 25,
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 22,
          "padding": 15,
        }
      }
    >
      Déjà vu
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#2E3338",
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 120,
                "opacity": 1,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              },
              undefined,
            ]
          }
          testID="ErrorContinueButton"
        >
          <Text
            maxFontSizeMultiplier={1}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 24,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            restartApp
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ErrorScreen without errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 120,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Jost-Book",
          "fontSize": 26,
          "lineHeight": 32,
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Jost-Medium",
          "fontSize": 22,
          "lineHeight": 28,
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        {
          "backgroundColor": "rgba(238, 238, 238, 0.75)",
          "borderRadius": 25,
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 22,
          "padding": 15,
        }
      }
    >
      unknown
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#2E3338",
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 120,
                "opacity": 1,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              },
              undefined,
            ]
          }
          testID="ErrorContinueButton"
        >
          <Text
            maxFontSizeMultiplier={1}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 24,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            restartApp
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
